--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^7.1.3",
