--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.9.3",
@@ -40,8 +41,10 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "react": "^16.5.2",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.5.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.1",
